# lupus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Lupus  Lupus.cbp  README.md  build_and_run.fish  compile_commands.json.fish  main.c  main.cpp  meson.build
.clangd/index/: lupus.h.FA9E0F35FF7410D6.idx  lupus_application.c.59673F2F357033B5.idx  lupus_application.h.254C6493D42C9927.idx  lupus_editablelabel.c.B818CA0BA6A22FE8.idx  lupus_editablelabel.h.713579B382C8F542.idx  lupus_main.c.1AB1868E4DC32BC9.idx  lupus_main.h.0EDA7B69607D2721.idx  lupus_objectself.c.922DC30B6C25695A.idx  lupus_objectself.h.94EC3666E9818A11.idx  lupus_profile.c.30698263EE44376C.idx  lupus_profile.h.E0E2BEB784668A17.idx  lupus_profilechooser.c.5CA9138889ABF8C0.idx  lupus_profilechooser.h.ED49757A58F9AAB2.idx  main.c.7261B3A466C3CF09.idx  resources.c.05C561543E7C8F7F.idx  resources.c.62F9AE0DD8B5A0F0.idx
include/: Lupus.hpp  LupusEditableEntry.hpp  LupusFriendsBox.hpp  LupusMain.hpp  LupusProfile.hpp  LupusProfileChooser.hpp  ToxSelf.hpp  lupus.h  lupus_application.h  lupus_editable_label.h  lupus_editablelabel.h  lupus_friend.h  lupus_headerbar.h  lupus_main.h  lupus_mainchat.h  lupus_mainfriend.h  lupus_mainfriendlist.h  lupus_mainheaderbar.h  lupus_mainmessage.h  lupus_objectfriend.h  lupus_objectsaver.h  lupus_objectself.h  lupus_objecttransfers.h  lupus_profile.h  lupus_profile_chooser.h  lupus_profile_chooser_password_dialog.h  lupus_profilechooser.h  lupus_profilechooserpassworddialog.h  lupus_wrapper.h  lupus_wrapperfriend.h  meson.build  toxidenticon.h  utils.h
res/: lupus.c  lupus.gresource.xml
res/styles/: lupus.css  mainfriendlist.css  mainheaderbar.css
res/ui/: #editablelabel.ui#  #mainheaderbar.ui#  #profilechooser.ui#  editablelabel.ui  headerbar.ui  main.ui  mainchat.ui  mainfriend.ui  mainfriendlist.ui  mainheaderbar.ui  mainmessage.ui  profile.ui  profile_chooser.ui  profile_chooser.ui~  profile_chooser_password_dialog.ui  profilechooser.ui  profilechooserpassworddialog.ui
resource/: gresource.xml
src/: Lupus.cpp  LupusEditableEntry.cpp  LupusMain.cpp  LupusProfile.cpp  LupusProfileChooser.cpp  ToxSelf.cpp  lupus_application.c  lupus_editable_label.c  lupus_editablelabel.c  lupus_friend.c  lupus_headerbar.c  lupus_main.c  lupus_mainchat.c  lupus_mainfriend.c  lupus_mainfriendlist.c  lupus_mainheaderbar.c  lupus_mainmessage.c  lupus_objectfriend.c  lupus_objectsaver.c  lupus_objectself.c  lupus_objecttransfers.c  lupus_profile.c  lupus_profile_chooser.c  lupus_profile_chooser_password_dialog.c  lupus_profilechooser.c  lupus_profilechooserpassworddialog.c  lupus_wrapper.c  lupus_wrapperfriend.c  meson.build  resources.c  toxidenticon.c  utils.c
toxpp/: Avatar.hpp  Bootstrap.hpp  IdentIcon.hpp  Self.hpp  Toxpp.hpp  meson.build
