glib_compile_resources = find_program('glib-compile-resources', required : true) 

srcs = files(
  'lupus_main.c',
  'lupus_profile.c',
  'lupus_objectself.c',
  'lupus_application.c',
  'lupus_editablelabel.c',
  'lupus_profilechooser.c',
  'lupus_friend.c',
  'lupus_objectfriend.c',
  'lupus_objecttransfers.c',
  'toxidenticon.c'
  )
